--- a/projects/finance/Dockerfile
+++ b/projects/finance/Dockerfile
@@ -1,14 +1,28 @@
-# Use an official Python runtime as a parent image
-FROM python:3.9-slim
+# Use Python image
+FROM python:3.11-bullseye
 
-# Set the working directory in the container
-WORKDIR /usr/src/app
+# Install build dependencies
+RUN pip install --no-cache-dir --upgrade pip setuptools
 
-# Copy the current directory contents into the container at /usr/src/app
-COPY . .
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    g++ \
+    build-essential \
+    pkg-config \
+    cmake \
+    libatlas-base-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install any needed packages specified in requirements.txt
+# Set working directory
+WORKDIR /app
+
+# Copy requirements and install
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Run your script when the container launches
-CMD ["python", "./finance.py"]
+# Copy application files
+COPY . .
+
+# Command to run the application
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
