--- a/projects/finance/docker-compose.dev.yml
+++ b/projects/finance/docker-compose.dev.yml
@@ -32,8 +32,33 @@ services:
     depends_on:
       - db
     volumes:
-      - .:/app  # Bind mount for live-reloading in development
+      - .:/app
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${SERVER_PORT}", "--reload"]
+
+  frontend:
+    build:
+      context: ./webapp
+      dockerfile: Dockerfile
+    container_name: finance_frontend
+    volumes:
+      - ./webapp:/app
+      - /app/node_modules
+    ports:
+      - "5173:5173"
+    environment:
+      - API_URL=${API_URL}
+      - SERVER_PORT=${SERVER_PORT}
+      - HOST=0.0.0.0
+      - PORT=${FRONTEND_PORT}
+    command: npm run dev -- --host 0.0.0.0 --port 5173
+    depends_on:
+      - app
+    networks:
+      - finance_network
+
+networks:
+  finance_network:
+    driver: bridge
 
 volumes:
   pg_data:
