got local pytest working

--- a/projects/finance/docker-compose.dev.yml
+++ b/projects/finance/docker-compose.dev.yml
@@ -32,7 +32,7 @@ services:
     depends_on:
       - db
     volumes:
-      - .:/app
+      - ./server:/app
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${SERVER_PORT}", "--reload"]
 
   frontend:
