--- a/projects/mcontr_dev/.env
+++ b/projects/mcontr_dev/.env
@@ -5,3 +5,5 @@ VITE_WEATHER_API_KEY=a433f750d26242e394f61709241611
 # Pexels API Key  
 # Get your free API key from https://www.pexels.com/api/
 VITE_PEXELS_API_KEY=RriV0cksGXfySmzkqY6eNLIolwSiU4vHNIwwlJaRkEEWAJVeSpN6XSDg
+
+SERVER_PORT=5170
