--- a/projects/finance/docker-compose.dev.yml
+++ b/projects/finance/docker-compose.dev.yml
@@ -1,4 +1,3 @@
-
 services:
   db:
     image: postgres:latest
@@ -9,10 +8,10 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - finance_data:/var/lib/postgresql/data
       - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./sql/postgresql.conf:/etc/postgresql/postgresql.conf
-      - ./logs/pg_log:/var/lib/postgresql/data/pg_log
+      - ./logs/pg_log:/var/lib/postgresql/data
     command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
     ports:
       - "${DB_PORT}:${DB_PORT}"
@@ -21,7 +20,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: finance_api
+    container_name: finance_server
     restart: always
     environment:
       DB_USER: ${DB_USER}
@@ -33,8 +32,35 @@ services:
     depends_on:
       - db
     volumes:
-      - .:/app  # Bind mount for live-reloading in development
+      - ./server:/app
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${SERVER_PORT}", "--reload"]
 
+  frontend:
+    build:
+      context: ./webapp
+      dockerfile: Dockerfile
+    container_name: finance_frontend
+    volumes:
+      - ./webapp:/app
+      - /app/node_modules
+    ports:
+      - "5173:5173"
+    environment:
+      - API_URL=${API_URL}
+      - SERVER_PORT=${SERVER_PORT}
+      - HOST=0.0.0.0
+      - PORT=${FRONTEND_PORT}
+    command: npm run dev -- --host 0.0.0.0 --port 5173
+    depends_on:
+      - app
+    networks:
+      - finance_network
+
+networks:
+  finance_network:
+    driver: bridge
+
 volumes:
-  pg_data:
+  fiannce_data:
+    name: finance_data
+    external: false
