working web app with google maps API integration.

--- a/projects/locals-only-warp/.gitignore
+++ b/projects/locals-only-warp/.gitignore
@@ -3,3 +3,21 @@ venv/
 .venv/
 *.pyc
 __pycache__/
+# Environment files
+.env
+
+# IDE files
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
