--- a/projects/locals-only-warp/docker-compose.yml
+++ b/projects/locals-only-warp/docker-compose.yml
@@ -1,4 +1,4 @@
-# Locals Only - Enhanced Docker Compose Configuration
+# Locals Only - Simple Docker Compose Configuration
 version: '3.8'
 
 services:
@@ -6,13 +6,8 @@ services:
     build: .
     ports:
       - "5005:5005"
-    environment:
-      - FLASK_ENV=production
     env_file:
       - .env
-    volumes:
-      # Mount source code for development (comment out for production)
-      - .:/app
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5005/api/health"]
@@ -20,19 +15,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-
-  # Optional: Add nginx reverse proxy for production
-  # nginx:
-  #   image: nginx:alpine
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
-  #     - ./ssl:/etc/nginx/ssl:ro
-  #   depends_on:
-  #     - locals-only
-  #   restart: unless-stopped
 
 networks:
   default:
