updated locals only palette, UI + user perferences are made. TODO: UI

--- a/projects/locals-only-warp/.gitignore
+++ b/projects/locals-only-warp/.gitignore
@@ -3,6 +3,7 @@ venv/
 .venv/
 *.pyc
 __pycache__/
+*.ini
 # Environment files
 .env
 
@@ -17,6 +18,7 @@ Thumbs.db
 # Logs
 *.log
 logs/
+*.md
 
 # Temporary files
 *.tmp
