--- a/projects/locals-only-warp/pyproject.toml
+++ b/projects/locals-only-warp/pyproject.toml
@@ -16,3 +16,8 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv.workspace]
+members = [
+    "backend",
+]
