--- a/projects/locals-only-warp/backend/requirements.txt
+++ b/projects/locals-only-warp/backend/requirements.txt
@@ -1,20 +1,18 @@
-# Core Flask web framework
-flask>=2.3.3
+# FastAPI web framework
+fastapi>=0.104.0
 
-# LangChain for AI integration
-langchain>=0.0.27
-langchain-anthropic>=0.1.0
+# ASGI server
+uvicorn[standard]>=0.24.0
 
-# HTTP requests for API calls
-requests>=2.31.0
+# Data validation
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+
+# HTTP client for API requests
+httpx>=0.25.0
 
 # Environment variable management
 python-dotenv>=1.0.0
 
-# Production WSGI server
-gunicorn>=21.2.0
-
-# Security and session management
-werkzeug>=2.3.7
-itsdangerous>=2.1.2
-markupsafe>=2.1.3
+# Database
+duckdb>=0.9.0
