mcp + google gemini

--- a/projects/scrapers/search_engine/pyproject.toml
+++ b/projects/scrapers/search_engine/pyproject.toml
@@ -10,4 +10,7 @@ dependencies = [
     "asyncio-mqtt>=0.11.0",
     "click>=8.0.0",
     "rich>=13.0.0",
+    "pip>=25.2",
+    "google-genai>=1.38.0",
+    "python-dotenv>=1.1.1",
 ]
