--- a/projects/scrapers/web_crawl/pyproject.toml
+++ b/projects/scrapers/web_crawl/pyproject.toml
@@ -11,7 +11,6 @@ requires-python = ">=3.11"
 dependencies = [
     "beautifulsoup4>=4.12.0",
     "requests>=2.31.0",
-    "google-generativeai>=0.8.0",
     "python-dotenv>=1.0.0",
     "urllib3>=2.0.0",
     "lxml>=4.9.0",
@@ -19,6 +18,7 @@ dependencies = [
     "rich>=13.0.0",
     "aiohttp>=3.9.0",
     "markdownify>=0.13.1",
+    "google-genai>=1.43.0",
 ]
 
 [project.optional-dependencies]
